--- a/paxos-reconf.tex
+++ b/paxos-reconf.tex
@@ -1423,16 +1423,17 @@ Nikolaus Jehl for their advice and comments on earlier drafts of this paper.
 %\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{mshell}}]{Michael Shell}
 % or if you just want to reserve a space for a photo:
 
-%\begin{IEEEbiography}{Michael Shell}
-%Biography text here.
-%\end{IEEEbiography}
+%\begin{IEEEbiography}{Michael Shell} Biography text here.  \end{IEEEbiography}
 %
 %% if you will not have a photo at all:
-%\begin{IEEEbiographynophoto}{David C. Turner}
-%received the Ph.D. degree from the University of Cambridge in 2009.
-%
-%Since 2010 he has worked as a software engineer at Tracsis plc.
-%\end{IEEEbiographynophoto}
+\begin{IEEEbiographynophoto}{David C. Turner} received the MMath degree and the
+Ph.D. degree from the University of Cambridge in 2004 and 2009 respectively.
+
+Since 2010 he has worked as a software engineer at Tracsis plc building systems
+to support and optimise operational planning processes in the transport
+industry.
+
+\end{IEEEbiographynophoto}
 
 %
 %% insert where needed to balance the two columns on the last page with
