--- a/paxos-reconf.tex
+++ b/paxos-reconf.tex
@@ -1426,6 +1426,8 @@ Nikolaus Jehl for their advice and comments on earlier drafts of this paper.
 %\begin{IEEEbiography}{Michael Shell} Biography text here.  \end{IEEEbiography}
 %
 %% if you will not have a photo at all:
+\ifCLASSOPTIONpeerreview
+\else
 \begin{IEEEbiographynophoto}{David C. Turner} received the MMath degree and the
 Ph.D. degree from the University of Cambridge in 2004 and 2009 respectively.
 
@@ -1434,6 +1436,7 @@ to support and optimise operational planning processes in the transport
 industry.
 
 \end{IEEEbiographynophoto}
+\fi
 
 %
 %% insert where needed to balance the two columns on the last page with
