--- a/paxos.bib
+++ b/paxos.bib
@@ -150,3 +150,17 @@ institution  = {Microsoft Research},
 } 
 
 
+@Inproceedings {omega-meets-paxos,
+address      = {Cracow, Poland},
+author       = {Dahlia Malkhi and Florin Oprea and Lidong Zhou},
+booktitle    = {19th Intl. Symposium on Distributed Computing (DISC 05)},
+institution  = {Microsoft Research},
+month        = {September},
+number       = {MSR-TR-2005-93},
+pages        = {25},
+publisher    = {European Association for Theoretical Computer Science},
+title        = {Omega Meets Paxos: Leader Election and Stability without Eventual Timely Links},
+url          = {http://research.microsoft.com/apps/pubs/default.aspx?id=64674},
+year         = {2005},
+}
+
