--- a/paxos-reconf.tex
+++ b/paxos-reconf.tex
@@ -354,7 +354,7 @@
 % correct bad hyphenation here
 \hyphenation{op-tical net-works semi-conduc-tor}
 
-\def\mytitle{Unlimited pipelining in dynamic Paxos}
+\def\mytitle{Unbounded pipelining in dynamically reconfigurable Paxos clusters}
 \include{inc}
 
 \begin{document}
@@ -444,12 +444,12 @@ distributed systems. Practical implementations of this kind of system must
 support dynamic reconfiguration in order to be able to replace failed
 components and perform other administrative tasks. Paxos can achieve high
 performance by pipelining (starting work on new requests before existing
-requests have completed) but typically limits the length of the pipeline to
+requests have completed) but typically bounds the length of the pipeline to
 ensure consistency during reconfiguration. Raft also supports pipelining and
-imposes no such limit on concurrent requests, preserving consistency instead by
+imposes no such bound on concurrent requests, preserving consistency instead by
 restricting which reconfigurations may be performed. It is shown that Paxos can
 be extended to support a more general form of reconfiguration which subsumes
-the original limited-pipeline approach as well as Raft-like fully-concurrent
+the original bounded-pipeline approach as well as Raft-like fully-concurrent
 reconfigurations and more besides.\end{abstract}
 
 % Note that keywords are not normally used for peerreview papers.
