--- a/paxos.bib
+++ b/paxos.bib
@@ -164,3 +164,56 @@ url          = {http://research.microsoft.com/apps/pubs/default.aspx?id=64674},
 year         = {2005},
 }
 
+@inproceedings {zab-reconf,
+  author = {Alexander Shraer and Benjamin Reed and Dahlia Malkhi and Flavio P. Junqueira},
+  title = {Dynamic Reconfiguration of Primary/Backup Clusters},
+  booktitle = {Presented as part of the 2012 USENIX Annual Technical Conference (USENIX ATC 12)},
+  year = {2012},
+  isbn = {978-931971-93-5},
+  address = {Boston, MA},
+  pages = {425--437},
+  publisher = {USENIX},
+}
+
+@inproceedings{zab,
+ author = {Reed, Benjamin and Junqueira, Flavio P.},
+ title = {A Simple Totally Ordered Broadcast Protocol},
+ booktitle = {Proceedings of the 2Nd Workshop on Large-Scale Distributed Systems and Middleware},
+ series = {LADIS '08},
+ year = {2008},
+ isbn = {978-1-60558-296-2},
+ location = {Yorktown Heights, New York, USA},
+ pages = {2:1--2:6},
+ articleno = {2},
+ numpages = {6},
+ doi = {10.1145/1529974.1529978},
+ acmid = {1529978},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
+@techreport{viewstamped-replication,
+   author = {Barbara Liskov and James Cowling},
+   title = {Viewstamped Replication Revisited},
+   institution = {MIT},
+   number = {MIT-CSAIL-TR-2012-021},
+   month = jul,
+   year = {2012}
+}
+@inproceedings{paxos-made-live,
+ author = {Chandra, Tushar D. and Griesemer, Robert and Redstone, Joshua},
+ title = {Paxos Made Live: An Engineering Perspective},
+ booktitle = {Proceedings of the Twenty-sixth Annual ACM Symposium on Principles of Distributed Computing},
+ series = {PODC '07},
+ year = {2007},
+ isbn = {978-1-59593-616-5},
+ location = {Portland, Oregon, USA},
+ pages = {398--407},
+ numpages = {10},
+ doi = {10.1145/1281100.1281103},
+ acmid = {1281103},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Paxos, experiences, fault-tolerance, implementation},
+} 
+
