--- a/paxos-reconf.tex
+++ b/paxos-reconf.tex
@@ -440,18 +440,26 @@ d.turner@tracsis.com)}% <-this % stops a space
 
 % As a general rule, do not put math, special symbols or citations in the
 % abstract or keywords.
-\begin{abstract}Paxos and Raft are algorithms for building fault-tolerant
-distributed systems. Practical implementations of this kind of system must
-support dynamic reconfiguration in order to be able to replace failed
-components and perform other administrative tasks. Paxos can achieve high
-performance by pipelining (starting work on new requests before existing
-requests have completed) but typically bounds the length of the pipeline to
-ensure consistency during reconfiguration. Raft also supports pipelining and
-imposes no such bound on concurrent requests, preserving consistency instead by
-restricting which reconfigurations may be performed. It is shown that Paxos can
-be extended to support a more general form of reconfiguration which subsumes
-the original bounded-pipeline approach as well as Raft-like fully-concurrent
-reconfigurations and more besides.\end{abstract}
+
+\begin{abstract}Distributed consensus is an essential building block for
+  creating fault-tolerant systems. When equipped with a consensus algorithm a
+  distributed system can act as a replicated state machine (RSM), duplicating
+  its state across a number of redundant components to avoid the failure of any
+  single component leading to a system-wide failure. Paxos and Raft are two
+  examples of algorithms for achieving distributed consensus. Practical
+  implementations of this kind of system must support dynamic reconfiguration
+  in order to be able to replace failed components and perform other
+  administrative tasks. Paxos can achieve high performance by pipelining
+  (starting work on new requests before existing requests have completed) but
+  typically bounds the length of the pipeline to ensure consistency during
+  reconfiguration. Raft also supports pipelining and imposes no such bound on
+  concurrent requests, preserving consistency instead by restricting which
+  reconfigurations may be performed. This article shows how to extend Paxos to
+  support a more general form of reconfiguration which subsumes the original
+  bounded-pipeline approach as well as Raft-like fully-concurrent
+  reconfigurations and more besides.
+
+\end{abstract}
 
 % Note that keywords are not normally used for peerreview papers.
 \begin{IEEEkeywords}
@@ -475,76 +483,150 @@ Distributed algorithms, fault tolerance.
 
 \section{Introduction}
 
-\IEEEPARstart{P}{axos} \cite{part-time-parliament} AND RAFT\cite{raft} are
-algorithms for achieving consensus on (or \textit{choosing}) a sequence $v_0,
-v_1, \ldots$ of values in a distributed, fault-tolerant fashion. They guarantee
-system-wide \textit{consistency}, in the sense that the values chosen are
-guaranteed to be equal across the whole system even in the presence of
-failures. They typically run on a cluster of $2f+1$ nodes, where $f$ is the
-number of faulty nodes that should be tolerated, and consensus is achieved on a
-value $v_i$ when $\ge f+1$ (i.e. a majority) of the nodes agree.  The
-(nonempty) sets of nodes involved in reaching consensus are known as
-\textit{quorums} and the set of quorums in use is known as the
-\textit{configuration} of the cluster.
+\IEEEPARstart{D}{istributed} systems can tolerate faults if they are built from
+redundant components such that certain sets of components may fail without
+causing a system-wide failure. A replicated state machine (RSM) is a style of
+fault-tolerant distributed system in which a deterministic state machine is
+replicated across a number of redundant nodes. If each node receives the same
+sequence of commands then, being deterministic, they all compute the same state.
+
+In order to arrange for each node to receive the same sequence of commands the
+system must achieve consensus (or \textit{choose}) a consistent sequence $v_0,
+v_1, \ldots$ of values, which is known as the \textit{distributed consensus
+problem}. Paxos \cite{part-time-parliament} and Raft\cite{raft} are two
+algorithms that solve this problem.  They guarantee system-wide
+\textit{consistency}, in the sense that the values chosen are guaranteed to be
+equal across the whole system even in the presence of failures. They typically
+run on a cluster of $2f+1$ nodes, where $f$ is the number of faulty nodes that
+should be tolerated, and consensus is achieved on a value $v_i$ when $\ge f+1$
+(i.e. a majority) of the nodes agree.  The (nonempty) sets of nodes involved in
+reaching consensus are known as \textit{quorums} and the set of quorums in use
+is known as the \textit{configuration} of the cluster.
 
 It is normally necessary to be able to dynamically reconfigure a cluster by
-adding or removing nodes while it is running. It is crucial that all
-participating nodes agree on the cluster configuration, and this can be
-achieved by tracking the configuration with the consensus algorithm itself
-using a state machine whose transitions occur when particular values in the
-sequence are chosen.
+adding or removing nodes while it is running. This allows the components of the
+system to be repaired or replaced without needing to take the whole system
+offline. It is crucial that all participating nodes agree on the cluster
+configuration, and this can be achieved by tracking the configuration with a
+component of the RSM itself, and using the consensus algorithm to choose
+special reconfiguration commands when a configuration change is desired.
 
 In Paxos, each value $v_i$ is chosen using a separate instance $i$ of a
 two-phase consensus protocol known as \textit{Synod}. The full Paxos algorithm
-essentially runs an infinite sequence of Synod protocols in parallel: it starts
-by running phase I of all instances at once and then runs phase II of each
-instance in turn to yield the desired sequence of chosen values. It normally
-remains in phase II for extended periods of time, but will return to phase I if
-certain nodes become faulty, or if messages between certain pairs of nodes
-cease to be delivered reliably for a period, or if the configuration changes.
-Raft's pattern of execution is similar.
+essentially runs an infinite sequence of Synod protocols in parallel, using
+uniformity of the instances to do so without requiring an infinite amount of
+time.  It starts by running phase I of all instances at once and then runs
+phase II of each instance in turn to yield the desired sequence of chosen
+values. It normally continues to run phase II for extended periods of time, but
+will return to phase I if certain nodes become faulty, or if messages between
+certain pairs of nodes cease to be delivered reliably for a period, or if the
+configuration changes.  Raft's pattern of execution is similar.
 
-Both algorithms allow for \textit{pipelining} \cite{smart} whereby later values
-can be proposed before earlier ones have been chosen. To ensure that this
-preserves consistency is nontrivial because a value may only be proposed once a
-quorum of nodes are ready for it but the quorums change as values are chosen.
-Paxos implementations typically solve this problem by limiting the length of
-the pipeline to some $\alpha > 0$ and requiring that a configuration change
-chosen at instance $i$ does not take effect until at least instance $i +
-\alpha$.  Raft imposes no limit on the number of concurrently-running
-instances and instead ensures consistency by only allowing certain
-reconfigurations to take place, and then performs sequences of these restricted
-reconfigurations in order to achieve an arbitrary reconfiguration.
+Both algorithms support high throughput by allowing for \textit{pipelining}
+\cite{smart} whereby an instance may start running before all previous
+instances have fully completed. It is a little tricky to ensure that this
+preserves consistency when the configuration is held in the RSM itself because
+a value may only be proposed once a quorum of nodes are ready for it, but the
+quorums change as values are chosen and the state of the RSM changes.  Paxos
+implementations typically solve this problem by limiting the length of the
+pipeline to some $\alpha > 0$ and requiring that a configuration change chosen
+at instance $i$ does not take effect until at least instance $i + \alpha$,
+which means that when a value is proposed there can be no as-yet-undecided
+configuration change in the pipeline.  Raft imposes no limit on the number of
+concurrently-running instances and instead ensures consistency by restricting
+which reconfigurations may occur, and then performs sequences of these
+restricted reconfigurations in order to achieve an arbitrary reconfiguration.
 
-The choice of the pipeline length parameter $\alpha$ is a little delicate: too
-small and the system may suffer from poor performance due to lack of
-parallelism, but too large and configuration changes can take an unreasonably
-long time to complete. It would be better to be able to vary the value of
-$\alpha$ as the system is running rather than having to choose it up-front, but
-there seems to be no published method for doing so safely. It would be better
-still to be able to impose this limit only when a configuration change is in
-progress and allow an unbounded pipeline while the configuration is static. But
-the need for any such limit seems inelegant\cite{reconfiguring-a-state-machine}
-particularly when compared with Raft's approach.
+The choice of the pipeline length parameter $\alpha$ must be made carefully. If
+it is too small then the system may suffer from poor performance due to lack of
+parallelism, but if it is too large then configuration changes can be
+unreasonably expensive to complete. It would be better to be able to vary the
+value of $\alpha$ as the system is running rather than having to choose it
+up-front, but there seems to be no published method for doing so safely. It
+would be better still to be able to impose this limit only when a configuration
+change is in progress and allow an unbounded pipeline while the configuration
+is static. The need for any such limit seems
+inelegant\cite{reconfiguring-a-state-machine} particularly when compared with
+Raft's approach.
 
-Here it is shown that the value of $\alpha$ can indeed be varied safely as the
-system is running and that the pipeline may indeed remain unbounded while the
-configuration is static. It is also shown that the pipeline may safely remain
-unbounded even during a configuration change as long as the reconfiguration
-satisfies the conditions described in section \ref{configuration-changes}
-below. In particular, this result unifies and generalises the reconfigurations
-supported by both Raft and Dynamic Paxos\cite{cheap-paxos} as shown in section
+Here it is shown that the pipeline length $\alpha$ can indeed be varied safely
+as the system is running and that the pipeline may indeed remain unbounded
+while the configuration is static. It is also shown that the pipeline may
+safely remain unbounded even during a configuration change as long as the
+reconfiguration satisfies certain conditions described in section
+\ref{configuration-changes} below. In particular, this result unifies and
+generalises the reconfigurations supported by both Raft and Dynamic
+Paxos\cite{cheap-paxos} as shown in section
 \ref{types-of-configuration-change}.
 
 The algorithm is presented here in its entirety for the sake of consistency of
 notation and because it modifies the original algorithm in ways that invalidate
 its consistency and liveness proofs. Reworked proofs are included in section
 \ref{liveness} and appendices \ref{synod-safety} and \ref{paxos-invariants} and
-differences from the original are discussed throughout.
+differences from the original are discussed throughout. We begin with a recap
+of the Synod algorithm in section \ref{synod-text} and follow this by covering
+the full Paxos algorithm in section \ref{paxos-text}, then in section
+\ref{types-of-configuration-change} it is shown how this work generalises the
+existing reconfiguration processes supported in Paxos and Raft.
 
 %\IEEEpubidadjcol %must be in 2nd col of 1st page
 
-\section{The Synod Algorithm}
+\section{Related Work}
+
+Lamport's original presentation of Paxos \cite{part-time-parliament} introduced
+the bounded-pipeline technique for supporting reconfiguration in which the
+pipeline length was defined to be 3. He later clarified that the value `3' was
+intended to stand for an arbitrary $\alpha > 0$ in \cite{paxos-made-simple}.
+Later still Lamport and Massa \cite{cheap-paxos} drew a distinction between
+Static Paxos in which the configuration may not change and Dynamic Paxos which
+supports reconfiguration but requires a bounded pipeline.  Dynamic Paxos was
+used as a basis for Cheap Paxos in which the system automatically reconfigures
+itself to achieve higher resilience to failures that do not occur
+simultaneously, and which uses a heterogeneous set of nodes to reduce the costs
+of operating a cluster.
+
+Chandra, Griesemer and Redstone \cite{paxos-made-live} note that the details of
+reconfiguration are ``relatively minor'' but ``subtle'' and do not give any
+details on the scheme that they use.
+
+Malkhi, Lamport and Zhou \cite{stoppable-paxos} proposed Stoppable Paxos, an
+alternative method for reconfiguring clusters in which an RSM may be stopped,
+reconfigured, and then restarted with the new configuration. Stoppable Paxos
+allows values to be chosen out-of-order within a single configuration, but the
+pipeline cannot cross configurations as the old RSM must stop before the new
+one starts\footnote{TODO mention this again in conclusion}.
+
+Malkhi, Lamport and Zhou \cite{vertical-paxos} then proposed Vertical Paxos
+which keeps the RSM running throughout a reconfiguration, but requires a
+separate oracle to manage the configuration. The Egalitarian Paxos of Moraru,
+Andersen and Kaminsky \cite{egalitarian-paxos} uses a similar reconfiguration
+scheme.  The problem with needing an external oracle is that for full
+resilience it must be possible to reconfigure the oracle itself, which requires
+another oracle and so on \textit{ad infinitum}.
+
+Ongaro and Ousterhout \cite{raft} developed the Raft protocol which supports an
+unbounded pipeline throughout the reconfiguration process by instead limiting
+the reconfigurations that can be performed to be, in a sense, sufficiently
+small.
+
+Viewstamped Replication and Zab are two other well-known consensus protocols.
+Viewstamped Replication supports reconfiguration as described by Liskov and
+Cowling \cite{viewstamped-replication} in a similar fashion to Vertical Paxos.
+Reed and Junqueira \cite{zab} initially publised Zab without reconfiguration
+and this feature was subsequently added by Shraer, Reed, Malkhi and Junqueira
+\cite{zab-reconf}, using a limited-pipeline approach much as in Dynamic Paxos.
+
+An interesting alternative approach was proposed by Jahl and Meling
+\cite{async-reconfig} which uses eventual consistency rather than consensus to
+determine the configuration of the system, and therefore supports
+reconfiguration as long as it is still possible to communicate with a quorum of
+nodes even if consensus cannot be achieved due to an inability to elect a
+distinguished leader. In such a situation consensus-based approaches such as
+the one presented here would fail to make any further progress, whereas one
+based on eventual consistency could be reconfigured into one in which a leader
+may be elected and thus in which further progress can be made.
+
+\section{The Synod Algorithm}\label{synod-text}
 
 Synod\cite{part-time-parliament} is an algorithm for achieving consensus on a
 single value in a distributed system comprising a set of nodes which can
@@ -668,7 +750,7 @@ demonstrate that consistency still holds even under the weaker assumption that
 $\QI{}(b_1) \frown \QII{}(b_2)$ only need hold when $\prop{}{b_1}$,
 $\chosen{}{b_2}$ and $b_1 \succ b_2$.
 
-\section{The Paxos algorithm}
+\section{The Paxos algorithm}\label{paxos-text}
 
 Conceptually, Paxos is a sequence of distinct instances of the Synod algorithm
 all running simultaneously. To achieve this, the messages of the Synod
@@ -882,7 +964,7 @@ system.
 %
 \end{itemize}
 
-\subsection{Examples}\label{types-of-configuration-change}
+\section{Examples}\label{types-of-configuration-change}
 
 This section contains some examples of configuration changes that satisfy the
 conditions described above.  All the configurations described here have equal
